Fix horizontal scrollbar in modals and the bookform column

--- a/src/assets/scss/elements/modal/_booksByAuthor.scss
+++ b/src/assets/scss/elements/modal/_booksByAuthor.scss
@@ -13,6 +13,7 @@
     .book-row {
         border-bottom: 1px solid $listBorderColor;
         padding: 10px;
+        margin: 0;
 
         &:hover {
             background: $booksByAuthorHoverBg;
